simple password matching implemented on client

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -38,9 +38,8 @@
                 <div class="login-card" style="font-family:'News Cycle', sans-serif;width:350px;height:569px;"><img src="static/img/avatar_2x.png" class="profile-img-card">
                     <p class="profile-name-card"> </p>
                     <form id="signup_form" class="form-signin"><span class="reauth-email"> </span>
-                        <div id="inputs"><input class="form-control" type="email" required="" placeholder="School Email" autofocus="" inputmode="email" id="email"><input class="form-control" type="password" required="" placeholder="Password" maxlength="16" minlength="8"
-                                id="password"><input class="form-control" type="password" required="" placeholder="Confirm Password" maxlength="16" minlength="8" id="password_confirm"><input class="form-control" type="text" required="" placeholder="School"
-                                autocomplete="on" id="school"></div>
+                        <div id="inputs"><input class="form-control" type="email" placeholder="School Email" autofocus="" id="email"><input class="form-control" type="password" placeholder="Password" id="password"><input class="form-control" type="password" placeholder="Confirm Password"
+                                id="password_confirm"><input class="form-control" type="text" placeholder="School" autocomplete="on" id="school"></div>
                         <div class="form-check"><input class="form-check-input" type="radio" name="AuthorityLevel" id="formCheck-2"><label class="form-check-label" for="formCheck-2">Teacher</label></div>
                         <div class="form-check"><input class="form-check-input" type="radio" name="AuthorityLevel" id="formCheck-2"><label class="form-check-label" for="formCheck-2">Student</label></div><span>&nbsp;</span>
                         <div class="checkbox">
@@ -76,7 +75,7 @@
     <script src="static/bootstrap/js/bootstrap.min.js"></script>
     <script src="static/js/server_function/server_bridge.js"></script>
     <script src="static/js/server_function/init.js"></script>
-    <script src="static/js/server_function/signup.js"></script>
+    <script src="static/js/server_function/signup_form.js"></script>
     <script src="static/js/website_function/-Countdown-BS4-.js"></script>
     <script src="static/js/website_function/-Fixed-Navbar-start-with-transparency-BS4-.js"></script>
     <script src="static/js/website_function/Bold-BS4-Animated-Back-To-Top.js"></script>
