--- a/templates/announcement.html
+++ b/templates/announcement.html
@@ -34,7 +34,7 @@
 
 <body>
     <div class="row" style="height:183px;">
-        <div class="col" style="height:186px;">
+        <div class="col">
             <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white transparency border-bottom border-light" id="transmenu" style="color:rgb(255,255,255);background-color:#439d4c;">
                 <div class="container"><a class="navbar-brand text-success" href="index.html" style="font-family:'News Cycle', sans-serif;font-size:39px;">&nbsp;<img class="img-fluid" src="static/img/Aphel_icon.png" alt="Aphel Technologies" width="97px" height="97px" style="padding-right:0px;margin-right:10px;margin-bottom:7px;"></a>
                     <button
@@ -62,7 +62,9 @@
         </div>
     </div>
     <div class="row">
-        <div class="col"><div id="dashboard"></div></div>
+        <div class="col"><!-- Create the editor container -->
+<div id="editor"></div>
+</div>
     </div>
     <script src="static/js/jquery.min.js"></script>
     <script src="static/bootstrap/js/bootstrap.min.js"></script>
