--- a/templates/login.html
+++ b/templates/login.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="static/fonts/ionicons.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=News+Cycle">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700">
+    <link rel="stylesheet" href="https://cdn.quilljs.com/1.3.6/quill.snow.css">
     <link rel="stylesheet" href="static/css/-Countdown-BS4-.css">
     <link rel="stylesheet" href="static/css/-Fixed-Navbar-start-with-transparency-BS4-.css">
     <link rel="stylesheet" href="static/css/Bold-BS4-Animated-Back-To-Top.css">
@@ -18,8 +19,8 @@
     <link rel="stylesheet" href="static/css/footer.css">
     <link rel="stylesheet" href="static/css/Header-Blue.css">
     <link rel="stylesheet" href="static/css/Highlight-Phone.css">
-    <link rel="stylesheet" href="static/css/Google-Style-Login.css">
     <link rel="stylesheet" href="static/css/input/input_errors.css">
+    <link rel="stylesheet" href="static/css/Google-Style-Login.css">
     <link rel="stylesheet" href="static/css/input/input_sucesses.css">
     <link rel="stylesheet" href="static/css/navbar1.css">
     <link rel="stylesheet" href="static/css/Profile-Edit-Form.css">
@@ -45,7 +46,7 @@
                     href="register.html">Don't have an account? <span style="text-decoration: underline;">Create one now!</span></a></div>
             <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white transparency border-bottom border-light" id="transmenu"
                 style="color:rgb(255,255,255);background-color:#439d4c;">
-                <div class="container"><a class="navbar-brand text-success" href="index.html" style="font-family:'News Cycle', sans-serif;font-size:39px;">&nbsp;<img src="static/img/Aphel_icon.png" alt="Aphel Technologies" width="97px" height="97px" style="padding-right:0px;margin-right:10px;margin-bottom:7px;"></a>
+                <div class="container"><a class="navbar-brand text-success" href="index.html" style="font-family:'News Cycle', sans-serif;font-size:39px;">&nbsp;<img class="img-fluid" src="static/img/Aphel_icon.png" alt="Aphel Technologies" width="97px" height="97px" style="padding-right:0px;margin-right:10px;margin-bottom:7px;"></a>
                     <button
                         class="navbar-toggler collapsed" data-toggle="collapse" data-target="#navcol-1"><span></span><span></span><span></span></button>
                         <div class="collapse navbar-collapse" id="navcol-1" style="font-family:'News Cycle', sans-serif;font-size:22px;">
@@ -54,6 +55,16 @@
                                     <div class="dropdown-menu"
                                         role="menu"><a class="dropdown-item" role="presentation" href="http://pchacks.ca/index.html#about"><i class="fa fa-handshake-o" style="padding-right:5px;"></i>About Us</a><a class="dropdown-item" role="presentation" href="http://pchacks.ca/index.html#contact"><i class="fa fa-volume-control-phone" style="padding-right:5px;"></i>Contact</a></div>
                                 </li>
+                                <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#" style="padding-right:20px;"><i class="fa fa-user" style="padding-right:7px;"></i>User</a>
+                                    <div class="dropdown-menu"
+                                        role="menu"><a class="dropdown-item" role="presentation" href="profile.html"><i class="fa fa-address-card" style="padding-right:5px;"></i>Profile</a><a class="dropdown-item" role="presentation" href="announcement.html"><i class="fa fa-envelope-open-o" style="padding-right:5px;"></i>Create Announcement</a>
+                                        <a
+                                            class="dropdown-item" role="presentation" href="logout.html"><i class="fa fa-sign-out"></i>&nbsp;Logout</a>
+                                    </div>
+                                </li>
+                                <li class="nav-item" role="presentation"><a class="nav-link" href="dashboard.html" style="padding-right:20px;"><i class="fa fa-tachometer" style="padding-right:7px;"></i>Dashboard</a></li>
+                                <li class="nav-item" role="presentation"><a class="nav-link" href="login.html" style="padding-right:20px;"><i class="fa fa-sign-in" style="padding-right:7px;"></i>Login</a></li>
+                                <li class="nav-item" role="presentation"><a class="nav-link" href="signup.html" style="padding-right:20px;"><i class="fa fa-wpforms" style="padding-right:7px;"></i>Register</a></li>
                             </ul>
                         </div>
                 </div>
@@ -71,6 +82,7 @@
         </footer><a href="#0" class="cd-top js-cd-top cd-top--fade-out cd-top--show" style="background-image:url('static/img/cd-top-arrow.svg');width:40px;height:40px;">Top</a></div>
     <script src="static/js/jquery.min.js"></script>
     <script src="static/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
     <script src="static/js/server_function/server_bridge.js"></script>
     <script src="static/js/server_function/cookie_manager.js"></script>
     <script src="static/js/server_function/init.js"></script>
@@ -82,6 +94,8 @@
     <script src="static/js/website_function/Profile-Edit-Form.js"></script>
     <script src="static/js/website_function/Smooth-Scrollto-button-read-Description.js"></script>
     <script src="static/js/server_function/login_form.js"></script>
+    <script src="static/js/server_function/dashboard.js"></script>
+    <script src="static/js/server_function/quill_init.js"></script>
 </body>
 
 </html>
