Fixed bsdesign which broke when hard drive froze.
Server_bridge now calls JSON.stringify() on all data sent.

To get and parse json string with flask use request.get_json(force=True)
**force forces flask to get json even when dataType != "json" in the ajax request**

Users now have announcements! Dashboard now displays all announcements!

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -34,7 +34,7 @@
 
 <body>
     <div class="row" style="height:183px;">
-        <div class="col" style="height:186px;">
+        <div class="col">
             <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white transparency border-bottom border-light" id="transmenu" style="color:rgb(255,255,255);background-color:#439d4c;">
                 <div class="container"><a class="navbar-brand text-success" href="index.html" style="font-family:'News Cycle', sans-serif;font-size:39px;">&nbsp;<img class="img-fluid" src="static/img/Aphel_icon.png" alt="Aphel Technologies" width="97px" height="97px" style="padding-right:0px;margin-right:10px;margin-bottom:7px;"></a>
                     <button
