Announcements are now one announcement at a time.
Before each character of an announcement would be its own announcement.

--- a/templates/index.html
+++ b/templates/index.html
@@ -53,8 +53,7 @@
                                             <div class="dropdown-menu"
                                                 role="menu"><a class="dropdown-item" role="presentation" href="profile.html"><i class="fa fa-address-card" style="padding-right:5px;"></i>Profile</a><a class="dropdown-item" role="presentation" href="announcement.html"><i class="fa fa-envelope-open-o" style="padding-right:5px;"></i>Create Announcement</a>
                                                 <a
-                                                    class="dropdown-item" role="presentation" href="logout.html"><i class="fa fa-sign-out"></i>&nbsp;Logout</a>
-                                            </div>
+                                                    class="dropdown-item" role="presentation" href="logout.html"><i class="fa fa-sign-out"></i>&nbsp;Logout</a><a class="dropdown-item" role="presentation" href="user_announcements.html">Edit Announcements</a></div>
                                         </li>
                                         <li class="nav-item" role="presentation"><a class="nav-link" href="dashboard.html" style="padding-right:20px;"><i class="fa fa-tachometer" style="padding-right:7px;"></i>Dashboard</a></li>
                                         <li class="nav-item" role="presentation"><a class="nav-link" href="login.html" style="padding-right:20px;"><i class="fa fa-sign-in" style="padding-right:7px;"></i>Login</a></li>
@@ -146,6 +145,7 @@
     <script src="static/js/server_function/login_form.js"></script>
     <script src="static/js/server_function/dashboard.js"></script>
     <script src="static/js/server_function/quill_init.js"></script>
+    <script src="static/js/server_function/edit_announcements.js"></script>
 </body>
 
 </html>
