Announcement font-size now works.
Announcements now displayed from top to bottom in chronological order.(newest to oldest)

--- a/templates/announcement.html
+++ b/templates/announcement.html
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="static/css/sidebar.css">
     <link rel="stylesheet" href="static/css/Smooth-Scrollto-button-read-Description.css">
     <link rel="stylesheet" href="static/css/styles.css">
+    <link rel="stylesheet" href="static/css/quill.css">
 </head>
 
 <body>
