--- a/templates/signup.html
+++ b/templates/signup.html
@@ -41,9 +41,7 @@
                     <p class="profile-name-card"> </p>
                     <form id="signup_form" class="form-signin"><span class="reauth-email"> </span>
                         <div id="inputs"><input class="form-control" type="email" placeholder="School Email" autofocus="" id="email"><input class="form-control" type="password" placeholder="Password" id="password"><input class="form-control" type="password" placeholder="Confirm Password"
-                                id="password_confirm"><input class="form-control" type="text" placeholder="School" autocomplete="on" id="school"></div>
-                        <div class="form-check"><input class="form-check-input" type="radio" name="AuthorityLevel" id="formCheck-2"><label class="form-check-label" for="formCheck-2">Teacher</label></div>
-                        <div class="form-check"><input class="form-check-input" type="radio" name="AuthorityLevel" id="formCheck-2"><label class="form-check-label" for="formCheck-2">Student</label></div><span>&nbsp;</span>
+                                id="password_confirm"></div>
                         <div class="checkbox">
                             <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-1"></div>
                         </div><button class="btn btn-primary btn-block btn-lg btn-signin" type="submit" style="background-color:#439d4c;">Sign up</button></form><a class="d-block forgot-password" href="#">Forgot your password?</a><a class="d-block forgot-password"
@@ -99,6 +97,7 @@
     <script src="static/js/server_function/dashboard.js"></script>
     <script src="static/js/server_function/quill_init.js"></script>
     <script src="static/js/server_function/edit_announcements.js"></script>
+    <script src="static/js/website_function/failed_login_modal.js"></script>
 </body>
 
 </html>
