--- a/templates/index.html
+++ b/templates/index.html
@@ -147,6 +147,7 @@
     <script src="static/js/server_function/dashboard.js"></script>
     <script src="static/js/server_function/quill_init.js"></script>
     <script src="static/js/server_function/edit_announcements.js"></script>
+    <script src="static/js/website_function/failed_login_modal.js"></script>
 </body>
 
 </html>
