--- a/templates/profile.html
+++ b/templates/profile.html
@@ -123,6 +123,7 @@
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
     <script src="static/js/server_function/server_bridge.js"></script>
     <script src="static/js/server_function/cookie_manager.js"></script>
+    <script src="static/js/login_check.js"></script>
     <script src="static/js/server_function/init.js"></script>
     <script src="static/js/server_function/signup_form.js"></script>
     <script src="static/js/website_function/-Countdown-BS4-.js"></script>
@@ -135,6 +136,7 @@
     <script src="static/js/server_function/dashboard.js"></script>
     <script src="static/js/server_function/quill_init.js"></script>
     <script src="static/js/server_function/edit_announcements.js"></script>
+    <script src="static/js/server_function/user_announcements.js"></script>
     <script src="static/js/website_function/failed_login_modal.js"></script>
 </body>
 
