Announcements are now editable from the user->edit announcements page.(user_announcements.html)

--- a/templates/user_announcements.html
+++ b/templates/user_announcements.html
@@ -65,7 +65,9 @@
         <div class="col">
             <div class="card" id="announcement_template">
                 <div class="card-body">
-                    <p class="card-text" id="content_html">content_html</p>
+                    <div>
+                        <p id="content_html">content_html</p>
+                    </div>
                     <div class="row">
                         <div class="col-lg-1 offset-lg-9">
                             <div style="width:297px;"><button class="btn btn-secondary" type="button" id="edit_button" style="width:75px;">Edit</button></div>
