--- a/templates/user_announcements.html
+++ b/templates/user_announcements.html
@@ -66,7 +66,7 @@
             <div class="card" id="announcement_template">
                 <div class="card-body">
                     <div>
-                        <p id="content_html">content_html</p>
+                        <p id="content_html" style="padding:0px;">content_html</p>
                     </div>
                     <div class="row">
                         <div class="col-lg-1 offset-lg-9">
