Added email confirmations.
Users now have the "confirmed" attribute which is defaulted to "false".

--- a/templates/index.html
+++ b/templates/index.html
@@ -150,6 +150,7 @@
     <script src="static/js/server_function/edit_announcements.js"></script>
     <script src="static/js/server_function/user_announcements.js"></script>
     <script src="static/js/website_function/failed_login_modal.js"></script>
+    <script src="static/js/server_function/confirmation.js"></script>
 </body>
 
 </html>
