--- a/templates/confirmation.html
+++ b/templates/confirmation.html
@@ -34,19 +34,8 @@
 </head>
 
 <body>
-    <div>
-        <header>
-            <div class="d-flex align-items-center" style="height:100vh;background-color:rgb(238,238,238);padding:62vh 20px 55vh;padding-top:480px;">
-                <div class="login-card" style="font-family:'News Cycle', sans-serif;width:350px;height:569px;"><img src="static/img/avatar_2x.png" class="profile-img-card">
-                    <p class="profile-name-card"> </p>
-                    <form id="signup_form" class="form-signin"><span class="reauth-email"> </span>
-                        <div id="inputs"><input class="form-control" type="email" placeholder="School Email" autofocus="" id="email"><input class="form-control" type="password" placeholder="Password" id="password"><input class="form-control" type="password" placeholder="Confirm Password"
-                                id="password_confirm"></div>
-                        <div class="checkbox">
-                            <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-1"></div>
-                        </div><button class="btn btn-primary btn-block btn-lg btn-signin" type="submit" style="background-color:#439d4c;">Sign up</button></form><a class="d-block forgot-password" href="#">Forgot your password?</a><a class="d-block forgot-password"
-                        href="signup.html">Already Have an Acount? Sign In</a></div>
-            </div>
+    <div class="row" style="height:183px;">
+        <div class="col">
             <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white transparency border-bottom border-light" id="transmenu" style="color:rgb(255,255,255);background-color:#439d4c;">
                 <div class="container"><a class="navbar-brand text-success" href="index.html" style="font-family:'News Cycle', sans-serif;font-size:39px;">&nbsp;<img class="img-fluid" src="static/img/Aphel_icon.png" alt="Aphel Technologies" width="97px" height="97px" style="padding-right:0px;margin-right:10px;margin-bottom:7px;"></a>
                     <button
@@ -70,16 +59,8 @@
                         </div>
                 </div>
             </nav>
-        </header>
+        </div>
     </div>
-    <section class="d-block"></section>
-    <div class="footer-basic" style="background-color:#439d4c;">
-        <footer>
-            <div class="social"><a href="https://www.instagram.com/pchackingsquad/" style="color:rgb(255,255,255);"><i class="icon ion-social-instagram"></i></a><a href="#" style="color:rgb(255,255,255);"><i class="icon ion-social-twitter" style="color:rgb(255,255,255);"></i></a></div>
-            <ul
-                class="list-inline"></ul>
-                <p class="copyright" style="color:rgb(255,255,255);">Alphel @ 2018</p>
-        </footer><a href="#0" class="cd-top js-cd-top cd-top--fade-out cd-top--show" style="background-image:url('static/img/cd-top-arrow.svg');width:40px;height:40px;">Top</a></div>
     <script src="static/js/jquery.min.js"></script>
     <script src="static/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
