--- a/templates/confirmation_sent.html
+++ b/templates/confirmation_sent.html
@@ -39,8 +39,7 @@
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
     <script src="static/js/server_function/server_bridge.js"></script>
     <script src="static/js/server_function/cookie_manager.js"></script>
-    <script src="static/js/login_check.js"></script>
-    <script src="static/js/server_function/init.js"></script>
+    <script src="static/js/init.js"></script>
     <script src="static/js/server_function/signup_form.js"></script>
     <script src="static/js/website_function/-Countdown-BS4-.js"></script>
     <script src="static/js/website_function/-Fixed-Navbar-start-with-transparency-BS4-.js"></script>
@@ -55,6 +54,7 @@
     <script src="static/js/server_function/user_announcements.js"></script>
     <script src="static/js/website_function/failed_login_modal.js"></script>
     <script src="static/js/server_function/confirmation.js"></script>
+    <script src="static/js/website_function/navbar.js"></script>
 </body>
 
 </html>
