--- a/templates/edit_announcements.html
+++ b/templates/edit_announcements.html
@@ -33,14 +33,9 @@
     <link rel="stylesheet" href="static/css/quill.css">
 </head>
 
-<body>
-    <div>
-        <header>
-            <div class="d-flex align-items-center" style="height:100vh;background-color:rgb(238,238,238);padding:62vh 20px 55vh;padding-top:380px;padding-bottom:230px;">
-                <div class="login-card" style="font-family:'News Cycle', sans-serif;width:350px;height:370px;">
-                    <p class="profile-name-card" style="font-size:89px;color:rgb(156,157,157);"> <i class="fa fa-check" style="color:rgb(157,157,157);"></i></p>
-                    <p class="text-center" style="color:rgb(106,102,102);">Your announcement has been posted. A confirmation has now been sent to your pdsb email.&nbsp;</p><a class="d-block forgot-password" href="#" style="padding-left:0px;">No email to be found? Click here to resend the confirmation</a></div>
-            </div>
+<body style="background-color:rgb(238,238,238);padding-right:0px;padding-left:0px;">
+    <div class="row" style="height:183px;">
+        <div class="col">
             <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white transparency border-bottom border-light" id="transmenu" style="color:rgb(255,255,255);background-color:#439d4c;">
                 <div class="container"><a class="navbar-brand text-success" href="index.html" style="font-family:'News Cycle', sans-serif;font-size:39px;">&nbsp;<img class="img-fluid" src="static/img/Aphel_icon.png" alt="Aphel Technologies" width="97px" height="97px" style="padding-right:0px;margin-right:10px;margin-bottom:7px;"></a>
                     <button
@@ -57,16 +52,37 @@
                                         <a
                                             class="dropdown-item" role="presentation" href="logout.html"><i class="fa fa-sign-out"></i>&nbsp;Logout</a><a class="dropdown-item" role="presentation" href="user_announcements.html">Edit Announcements</a></div>
                                 </li>
-                                <li class="nav-item" role="presentation"><a class="nav-link" href="dashboard.html" style="padding-right:20px;"><i class="fa fa-tachometer" style="padding-right:7px;"></i>Dashboard</a></li>
-                                <li class="nav-item" role="presentation"><a class="nav-link" href="login.html" style="padding-right:20px;"><i class="fa fa-sign-in" style="padding-right:7px;"></i>Login</a></li>
-                                <li class="nav-item" role="presentation"><a class="nav-link" href="signup.html" style="padding-right:20px;"><i class="fa fa-wpforms" style="padding-right:7px;"></i>Register</a></li>
                             </ul>
                         </div>
                 </div>
             </nav>
-        </header>
+        </div>
     </div>
-    <section class="d-block"></section>
+    <div class="row">
+        <div class="col"><div id="dashboard"></div></div>
+    </div>
+    <div style="padding-right:10px;padding-left:10px;padding-top:20px;">
+        <div class="container card-shadow" style="padding:0px;margin-bottom:21px;">
+            <div class="d-block" style="height:70px;background-color:#ffffff;padding:10px;padding-left:20px;padding-right:20px;">
+                <blockquote class="blockquote">
+                    <p class="mb-0" style="color:rgb(33,37,41);font-family:'News Cycle', sans-serif;">Announcement Title</p>
+                    <footer class="blockquote-footer" style="color:rgb(33,37,41);font-family:'News Cycle', sans-serif;">Club Name, Name of user that posted this</footer>
+                </blockquote>
+            </div>
+            <div class="d-block overflow" style="height:170px;background-color:#ffffff;font-family:'News Cycle', sans-serif;padding:10px;padding-right:20px;padding-left:20px;">
+                <p class="d-block">Announcement info goes here.&nbsp;Announcement info goes here.&nbsp;Announcement info goes here.&nbsp;Announcement info goes here.&nbsp;Announcement info goes here.&nbsp;<br></p>
+                <p class="d-block">VVV Add a footer to each post with the timestamp, and a function to pin the post so that it is always at the top of the students announcements, or in a separate favourites page.</p>
+            </div>
+            <div class="d-block" style="height:80px;background-color:#ffffff;padding:10px;padding-left:20px;padding-right:20px;padding-top:15px;"><button class="btn btn-primary btn-lg d-inline btn-signin" type="submit" style="background-color:#439d4c;width:100px;font-size:16px;height:42px;margin-right:10px;">Edit</button><button class="btn btn-primary btn-lg d-inline btn-signin" type="submit"
+                    style="background-color:#b8395f;width:100px;font-size:16px;height:42px;">Delete</button></div>
+        </div>
+        <div class="container card-shadow" style="padding:0px;margin-bottom:21px;">
+            <div class="d-block" style="height:120px;background-color:#ffffff;padding:10px;padding-left:20px;padding-right:20px;padding-top:20px;"><input class="d-block" type="text" placeholder="Edit Title" style="width:100%;margin-left:0px;margin-bottom:20px;font-family:'News Cycle', sans-serif;padding-left:5px;"><input class="d-block" type="text" placeholder="Edit Club/Team" style="width:100%;margin-left:0px;font-family:'News Cycle', sans-serif;padding-left:5px;"></div>
+            <div
+                class="d-block overflow" style="height:170px;background-color:#ffffff;font-family:'News Cycle', sans-serif;padding:10px;padding-right:20px;padding-left:20px;"><textarea style="width:100%;height:200px;" placeholder="Edit Announcement"></textarea></div>
+        <div class="d-block" style="height:80px;background-color:#ffffff;padding:10px;padding-left:20px;padding-right:20px;padding-top:15px;"><button class="btn btn-primary btn-block btn-lg d-inline-block btn-signin" type="submit" style="background-color:#439d4c;width:100px;font-size:16px;height:42px;">Edit</button></div>
+    </div>
+    </div>
     <div class="footer-basic" style="background-color:#439d4c;">
         <footer>
             <div class="social"><a href="https://www.instagram.com/pchackingsquad/" style="color:rgb(255,255,255);"><i class="icon ion-social-instagram"></i></a><a href="#" style="color:rgb(255,255,255);"><i class="icon ion-social-twitter" style="color:rgb(255,255,255);"></i></a></div>
