--- a/templates/post_announcement_review.html
+++ b/templates/post_announcement_review.html
@@ -33,14 +33,9 @@
     <link rel="stylesheet" href="static/css/quill.css">
 </head>
 
-<body>
-    <div>
-        <header>
-            <div class="d-flex align-items-center" style="height:100vh;background-color:rgb(238,238,238);padding:62vh 20px 55vh;padding-top:380px;padding-bottom:230px;">
-                <div class="login-card" style="font-family:'News Cycle', sans-serif;width:350px;height:370px;">
-                    <p class="profile-name-card" style="font-size:89px;color:rgb(156,157,157);"> <i class="fa fa-check" style="color:rgb(157,157,157);"></i></p>
-                    <p class="text-center" style="color:rgb(106,102,102);">Your announcement has been posted. A confirmation has now been sent to your pdsb email.&nbsp;</p><a class="d-block forgot-password" href="#" style="padding-left:0px;">No email to be found? Click here to resend the confirmation</a></div>
-            </div>
+<body style="background-color:rgb(238,238,238);padding-right:0px;padding-left:0px;padding-top:10px;">
+    <div class="row" style="height:183px;">
+        <div class="col">
             <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white transparency border-bottom border-light" id="transmenu" style="color:rgb(255,255,255);background-color:#439d4c;">
                 <div class="container"><a class="navbar-brand text-success" href="index.html" style="font-family:'News Cycle', sans-serif;font-size:39px;">&nbsp;<img class="img-fluid" src="static/img/Aphel_icon.png" alt="Aphel Technologies" width="97px" height="97px" style="padding-right:0px;margin-right:10px;margin-bottom:7px;"></a>
                     <button
@@ -57,16 +52,26 @@
                                         <a
                                             class="dropdown-item" role="presentation" href="logout.html"><i class="fa fa-sign-out"></i>&nbsp;Logout</a><a class="dropdown-item" role="presentation" href="user_announcements.html">Edit Announcements</a></div>
                                 </li>
-                                <li class="nav-item" role="presentation"><a class="nav-link" href="dashboard.html" style="padding-right:20px;"><i class="fa fa-tachometer" style="padding-right:7px;"></i>Dashboard</a></li>
-                                <li class="nav-item" role="presentation"><a class="nav-link" href="login.html" style="padding-right:20px;"><i class="fa fa-sign-in" style="padding-right:7px;"></i>Login</a></li>
-                                <li class="nav-item" role="presentation"><a class="nav-link" href="signup.html" style="padding-right:20px;"><i class="fa fa-wpforms" style="padding-right:7px;"></i>Register</a></li>
                             </ul>
                         </div>
                 </div>
             </nav>
-        </header>
+        </div>
     </div>
-    <section class="d-block"></section>
+    <div class="row">
+        <div class="col"><div id="dashboard"></div></div>
+    </div>
+    <div style="padding-left:10px;padding-right:10px;">
+        <div class="container" style="padding:0px;margin-bottom:21px;">
+            <div class="d-block login-card" style="height:580px;padding:25px;">
+                <p class="profile-name-card" style="font-family:'News Cycle', sans-serif;font-size:26px;color:rgb(92,104,116);margin-bottom:20px;">Make Your Announcement!<br></p>
+                <form class="form-signin"><span class="reauth-email"> </span><input class="form-control" type="email" required="" placeholder="Announcement Title" autofocus="" id="inputEmail" style="font-family:'News Cycle', sans-serif;"><input class="form-control" type="email"
+                        required="" placeholder="Club/Team" autofocus="" id="inputEmail" style="font-family:'News Cycle', sans-serif;"><input class="form-control" type="password" required="" placeholder="Authorizing Teacher" id="inputPassword" style="font-family:'News Cycle', sans-serif;">
+                    <textarea
+                        class="form-control" style="margin-bottom:20px;font-family:'News Cycle', sans-serif;height:200px;" placeholder="Type Your Anouncement Here!"></textarea>
+                </form><button class="btn btn-primary btn-block btn-lg btn-signin" type="submit" style="background-color:#439d4c;font-family:'News Cycle', sans-serif;">Sign up</button></div>
+        </div>
+    </div>
     <div class="footer-basic" style="background-color:#439d4c;">
         <footer>
             <div class="social"><a href="https://www.instagram.com/pchackingsquad/" style="color:rgb(255,255,255);"><i class="icon ion-social-instagram"></i></a><a href="#" style="color:rgb(255,255,255);"><i class="icon ion-social-twitter" style="color:rgb(255,255,255);"></i></a></div>
