--- a/templates/login.html
+++ b/templates/login.html
@@ -44,32 +44,31 @@
                             class="checkbox">
                             <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-1"></div>
                 </div><button class="btn btn-primary btn-block btn-lg btn-signin" type="submit" style="background-color:#439d4c;">Sign in</button></form><a class="d-block forgot-password" href="#">Forgot your password?</a><a class="d-block forgot-password"
-                    href="register.html">Don't have an account? <span style="text-decoration: underline;">Create one now!</span></a>
-                <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white transparency border-bottom border-light" id="transmenu"
-                    style="color:rgb(255,255,255);background-color:#439d4c;">
-                    <div class="container"><a class="navbar-brand text-success" href="index.html" style="font-family:'News Cycle', sans-serif;font-size:39px;">&nbsp;<img class="img-fluid" src="static/img/Aphel_icon.png" alt="Aphel Technologies" width="97px" height="97px" style="padding-right:0px;margin-right:10px;margin-bottom:7px;"></a>
-                        <button
-                            class="navbar-toggler collapsed" data-toggle="collapse" data-target="#navcol-1"><span></span><span></span><span></span></button>
-                            <div class="collapse navbar-collapse" id="navcol-1" style="font-family:'News Cycle', sans-serif;font-size:22px;">
-                                <ul class="nav navbar-nav ml-auto">
-                                    <li class="dropdown" id="nav_info"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#" style="padding-right:20px;"><i class="fa fa-info-circle" style="padding-right:7px;"></i>Info</a>
-                                        <div class="dropdown-menu"
-                                            role="menu"><a class="dropdown-item" role="presentation" href="http://pchacks.ca/index.html#about"><i class="fa fa-handshake-o" style="padding-right:5px;"></i>About Us</a><a class="dropdown-item" role="presentation" href="http://pchacks.ca/index.html#contact"><i class="fa fa-volume-control-phone" style="padding-right:5px;"></i>Contact</a></div>
-                                    </li>
-                                    <li class="dropdown" id="nav_user"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#" style="padding-right:20px;"><i class="fa fa-user" style="padding-right:7px;"></i>User</a>
-                                        <div class="dropdown-menu"
-                                            role="menu"><a class="dropdown-item" role="presentation" href="profile.html"><i class="fa fa-address-card" style="padding-right:5px;"></i>Profile</a><a class="dropdown-item" role="presentation" href="announcement.html"><i class="fa fa-envelope-open-o" style="padding-right:5px;"></i>Create Announcement</a>
-                                            <a
-                                                class="dropdown-item" role="presentation" href="logout.html"><i class="fa fa-sign-out"></i>&nbsp;Logout</a><a class="dropdown-item" role="presentation" href="user_announcements.html">Edit Announcements</a></div>
-                                    </li>
-                                    <li class="nav-item" role="presentation" id="nav_dashboard"><a class="nav-link" href="dashboard.html" style="padding-right:20px;"><i class="fa fa-tachometer" style="padding-right:7px;"></i>Dashboard</a></li>
-                                    <li class="nav-item" role="presentation" id="nav_login"><a class="nav-link" href="login.html" style="padding-right:20px;"><i class="fa fa-sign-in" style="padding-right:7px;"></i>Login</a></li>
-                                    <li class="nav-item" role="presentation" id="nav_register"><a class="nav-link" href="signup.html" style="padding-right:20px;"><i class="fa fa-wpforms" style="padding-right:7px;"></i>Register</a></li>
-                                </ul>
-                            </div>
-                    </div>
-                </nav>
-            </div>
+                    href="register.html">Don't have an account? <span style="text-decoration: underline;">Create one now!</span></a></div>
+            <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white transparency border-bottom border-light" id="transmenu"
+                style="color:rgb(255,255,255);background-color:#439d4c;">
+                <div class="container"><a class="navbar-brand text-success" href="index.html" style="font-family:'News Cycle', sans-serif;font-size:39px;">&nbsp;<img class="img-fluid" src="static/img/Aphel_icon.png" alt="Aphel Technologies" width="97px" height="97px" style="padding-right:0px;margin-right:10px;margin-bottom:7px;"></a>
+                    <button
+                        class="navbar-toggler collapsed" data-toggle="collapse" data-target="#navcol-1"><span></span><span></span><span></span></button>
+                        <div class="collapse navbar-collapse" id="navcol-1" style="font-family:'News Cycle', sans-serif;font-size:22px;">
+                            <ul class="nav navbar-nav ml-auto">
+                                <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#" style="padding-right:20px;"><i class="fa fa-info-circle" style="padding-right:7px;"></i>Info</a>
+                                    <div class="dropdown-menu"
+                                        role="menu"><a class="dropdown-item" role="presentation" href="http://pchacks.ca/index.html#about"><i class="fa fa-handshake-o" style="padding-right:5px;"></i>About Us</a><a class="dropdown-item" role="presentation" href="http://pchacks.ca/index.html#contact"><i class="fa fa-volume-control-phone" style="padding-right:5px;"></i>Contact</a></div>
+                                </li>
+                                <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#" id="nav_user" style="padding-right:20px;"><i class="fa fa-user" style="padding-right:7px;"></i>User</a>
+                                    <div class="dropdown-menu"
+                                        role="menu"><a class="dropdown-item" role="presentation" href="profile.html"><i class="fa fa-address-card" style="padding-right:5px;"></i>Profile</a><a class="dropdown-item" role="presentation" href="post_announcement.html"><i class="fa fa-envelope-open-o" style="padding-right:5px;"></i>Create Announcement</a>
+                                        <a
+                                            class="dropdown-item" role="presentation" href="logout.html"><i class="fa fa-sign-out"></i>&nbsp;Logout</a><a class="dropdown-item" role="presentation" href="user_announcements.html">Edit Announcements</a></div>
+                                </li>
+                                <li class="nav-item" role="presentation"><a class="nav-link" href="dashboard.html" style="padding-right:20px;"><i class="fa fa-tachometer" style="padding-right:7px;"></i>Dashboard</a></li>
+                                <li class="nav-item" role="presentation"><a class="nav-link" href="login.html" id="nav_login" style="padding-right:20px;"><i class="fa fa-sign-in" style="padding-right:7px;"></i>Login</a></li>
+                                <li class="nav-item" role="presentation"><a class="nav-link" href="signup.html" id="nav_register" style="padding-right:20px;"><i class="fa fa-wpforms" style="padding-right:7px;"></i>Register</a></li>
+                            </ul>
+                        </div>
+                </div>
+            </nav>
     </div>
     </header>
     </div>
@@ -108,7 +107,7 @@
     <script src="static/js/website_function/Smooth-Scrollto-button-read-Description.js"></script>
     <script src="static/js/server_function/login_form.js"></script>
     <script src="static/js/server_function/dashboard.js"></script>
-    <script src="static/js/server_function/create_announcement.js"></script>
+    <script src="static/js/server_function/post_announcement.js"></script>
     <script src="static/js/server_function/user_announcements.js"></script>
     <script src="static/js/website_function/failed_login_modal.js"></script>
     <script src="static/js/server_function/confirmation.js"></script>
