--- a/templates/user_announcements.html
+++ b/templates/user_announcements.html
@@ -33,7 +33,7 @@
     <link rel="stylesheet" href="static/css/quill.css">
 </head>
 
-<body>
+<body style="background-color:rgb(238,238,238);padding-right:0px;padding-left:0px;">
     <div class="row" style="height:183px;">
         <div class="col">
             <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white transparency border-bottom border-light" id="transmenu" style="color:rgb(255,255,255);background-color:#439d4c;">
@@ -42,19 +42,19 @@
                         class="navbar-toggler collapsed" data-toggle="collapse" data-target="#navcol-1"><span></span><span></span><span></span></button>
                         <div class="collapse navbar-collapse" id="navcol-1" style="font-family:'News Cycle', sans-serif;font-size:22px;">
                             <ul class="nav navbar-nav ml-auto">
-                                <li class="dropdown" id="nav_info"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#" style="padding-right:20px;"><i class="fa fa-info-circle" style="padding-right:7px;"></i>Info</a>
+                                <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#" style="padding-right:20px;"><i class="fa fa-info-circle" style="padding-right:7px;"></i>Info</a>
                                     <div class="dropdown-menu"
                                         role="menu"><a class="dropdown-item" role="presentation" href="http://pchacks.ca/index.html#about"><i class="fa fa-handshake-o" style="padding-right:5px;"></i>About Us</a><a class="dropdown-item" role="presentation" href="http://pchacks.ca/index.html#contact"><i class="fa fa-volume-control-phone" style="padding-right:5px;"></i>Contact</a></div>
                                 </li>
-                                <li class="dropdown" id="nav_user"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#" style="padding-right:20px;"><i class="fa fa-user" style="padding-right:7px;"></i>User</a>
+                                <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#" id="nav_user" style="padding-right:20px;"><i class="fa fa-user" style="padding-right:7px;"></i>User</a>
                                     <div class="dropdown-menu"
-                                        role="menu"><a class="dropdown-item" role="presentation" href="profile.html"><i class="fa fa-address-card" style="padding-right:5px;"></i>Profile</a><a class="dropdown-item" role="presentation" href="announcement.html"><i class="fa fa-envelope-open-o" style="padding-right:5px;"></i>Create Announcement</a>
+                                        role="menu"><a class="dropdown-item" role="presentation" href="profile.html"><i class="fa fa-address-card" style="padding-right:5px;"></i>Profile</a><a class="dropdown-item" role="presentation" href="post_announcement.html"><i class="fa fa-envelope-open-o" style="padding-right:5px;"></i>Create Announcement</a>
                                         <a
                                             class="dropdown-item" role="presentation" href="logout.html"><i class="fa fa-sign-out"></i>&nbsp;Logout</a><a class="dropdown-item" role="presentation" href="user_announcements.html">Edit Announcements</a></div>
                                 </li>
-                                <li class="nav-item" role="presentation" id="nav_dashboard"><a class="nav-link" href="dashboard.html" style="padding-right:20px;"><i class="fa fa-tachometer" style="padding-right:7px;"></i>Dashboard</a></li>
-                                <li class="nav-item" role="presentation" id="nav_login"><a class="nav-link" href="login.html" style="padding-right:20px;"><i class="fa fa-sign-in" style="padding-right:7px;"></i>Login</a></li>
-                                <li class="nav-item" role="presentation" id="nav_register"><a class="nav-link" href="signup.html" style="padding-right:20px;"><i class="fa fa-wpforms" style="padding-right:7px;"></i>Register</a></li>
+                                <li class="nav-item" role="presentation"><a class="nav-link" href="dashboard.html" style="padding-right:20px;"><i class="fa fa-tachometer" style="padding-right:7px;"></i>Dashboard</a></li>
+                                <li class="nav-item" role="presentation"><a class="nav-link" href="login.html" id="nav_login" style="padding-right:20px;"><i class="fa fa-sign-in" style="padding-right:7px;"></i>Login</a></li>
+                                <li class="nav-item" role="presentation"><a class="nav-link" href="signup.html" id="nav_register" style="padding-right:20px;"><i class="fa fa-wpforms" style="padding-right:7px;"></i>Register</a></li>
                             </ul>
                         </div>
                 </div>
@@ -63,23 +63,38 @@
     </div>
     <div class="row">
         <div class="col">
-            <div class="card" id="announcement_template">
-                <div class="card-body">
-                    <div>
-                        <p id="content_html" style="padding:0px;">content_html</p>
+            <div id="announcement_div" style="padding-right:10px;padding-left:10px;padding-top:20px;height:auto;">
+                <div class="container card-shadow" id="announcement_not_editing" style="padding:0px;margin-bottom:21px;display:none">
+                    <div class="d-block" style="height:70px;background-color:#ffffff;padding:10px;padding-left:20px;padding-right:20px;">
+                        <blockquote class="blockquote">
+                            <p id="announcement_title" class="mb-0" style="color:rgb(33,37,41);font-family:'News Cycle', sans-serif;">Announcement Title</p>
+                            <footer class="blockquote-footer" id="announcement_info" style="color:rgb(33,37,41);font-family:'News Cycle', sans-serif;">Club Name, Name of user that posted this</footer>
+                        </blockquote>
                     </div>
-                    <div class="row">
-                        <div class="col-lg-1 offset-lg-9">
-                            <div style="width:297px;"><button class="btn btn-secondary" type="button" id="edit_button" style="width:75px;">Edit</button></div>
-                        </div>
-                        <div class="col-lg-1">
-                            <div style="width:347px;"><button class="btn btn-danger" type="button" id="delete_button">Delete</button></div>
-                        </div>
+                    <div class="d-block overflow" style="height:170px;background-color:#ffffff;font-family:'News Cycle', sans-serif;padding:10px;padding-right:20px;padding-left:20px;">
+                        <p class="d-block" id="announcement_content">Announcement info goes here.&nbsp;Announcement info goes here.&nbsp;Announcement info goes here.&nbsp;Announcement info goes here.&nbsp;Announcement info goes here.&nbsp;<br></p>
+                        <p class="d-block" id="announcement_time_stamp">VVV Add a footer to each post with the timestamp, and a function to pin the post so that it is always at the top of the students announcements, or in a separate favourites page.</p>
                     </div>
+                    <div class="d-block" style="height:80px;background-color:#ffffff;padding:10px;padding-left:20px;padding-right:20px;padding-top:15px;"><button class="btn btn-primary btn-lg d-inline btn-signin" type="submit" id="edit_button" style="background-color:#439d4c;width:100px;font-size:16px;height:42px;margin-right:10px;">Edit</button><button class="btn btn-primary btn-lg d-inline btn-signin"
+                            type="submit" id="delete_button" style="background-color:#b8395f;width:100px;font-size:16px;height:42px;">Delete</button></div>
+                </div>
+                <div class="container card-shadow" id="announcement_editing" style="padding:0px;margin-bottom:21px;display:none">
+                    <div class="d-block" style="height:120px;background-color:#ffffff;padding:10px;padding-left:20px;padding-right:20px;padding-top:20px;"><input class="d-block" type="text" placeholder="Edit Title" id="announcement_edit_title" style="width:100%;margin-left:0px;margin-bottom:20px;font-family:'News Cycle', sans-serif;padding-left:5px;"><input class="d-block" type="text"
+                            placeholder="Edit Club/Team" id="announcement_edit_info" style="width:100%;margin-left:0px;font-family:'News Cycle', sans-serif;padding-left:5px;"></div>
+                    <div class="d-block overflow" id="announcement_editor_div" style="height:170px;background-color:#ffffff;font-family:'News Cycle', sans-serif;padding:10px;padding-right:20px;padding-left:20px;"></div>
+                    <div class="d-block" style="height:80px;background-color:#ffffff;padding:10px;padding-left:20px;padding-right:20px;padding-top:15px;"><button class="btn btn-primary btn-block btn-lg d-inline-block btn-signin" type="submit" id="save_button" style="background-color:#439d4c;width:100px;font-size:16px;height:42px;">Save</button></div>
                 </div>
             </div>
+            <div id="empty_space_fix" style="height:280px;"></div>
         </div>
     </div>
+    <div class="footer-basic" style="background-color:#439d4c;bottom:0px;position:fixed;width:100%;">
+        <footer>
+            <div class="social"><a href="https://www.instagram.com/pchackingsquad/" style="color:rgb(255,255,255);"><i class="icon ion-social-instagram"></i></a><a href="#" style="color:rgb(255,255,255);"><i class="icon ion-social-twitter" style="color:rgb(255,255,255);"></i></a></div>
+            <ul
+                class="list-inline"></ul>
+                <p class="copyright" style="color:rgb(255,255,255);">Alphel @ 2018</p>
+        </footer><a href="#0" class="cd-top js-cd-top cd-top--fade-out cd-top--show" style="background-image:url('static/img/cd-top-arrow.svg');width:40px;height:40px;">Top</a></div>
     <script src="static/js/jquery.min.js"></script>
     <script src="static/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
@@ -96,7 +111,7 @@
     <script src="static/js/website_function/Smooth-Scrollto-button-read-Description.js"></script>
     <script src="static/js/server_function/login_form.js"></script>
     <script src="static/js/server_function/dashboard.js"></script>
-    <script src="static/js/server_function/create_announcement.js"></script>
+    <script src="static/js/server_function/post_announcement.js"></script>
     <script src="static/js/server_function/user_announcements.js"></script>
     <script src="static/js/website_function/failed_login_modal.js"></script>
     <script src="static/js/server_function/confirmation.js"></script>
