-Added logout -Added email confirmation on client-side

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -109,6 +109,7 @@
     <script src="static/js/website_function/failed_login_modal.js"></script>
     <script src="static/js/server_function/confirmation.js"></script>
     <script src="static/js/website_function/navbar.js"></script>
+    <script src="static/js/website_function/logout.js"></script>
 </body>
 
 </html>
