--- a/templates/confirmation_confirmed.html
+++ b/templates/confirmation_confirmed.html
@@ -36,7 +36,11 @@
 <body>
     <div>
         <header>
-            <div class="row d-block" style="height:238px;background-color:#eeeeee;">
+            <div class="d-flex align-items-center" style="height:100vh;background-color:rgb(238,238,238);padding:62vh 20px 55vh;padding-top:380px;padding-bottom:230px;">
+                <div class="login-card" style="font-family:'News Cycle', sans-serif;width:350px;height:370px;">
+                    <p class="profile-name-card" style="font-size:31px;color:rgb(156,157,157);height:137px;">Account Succesfully Confirmed!</p>
+                    <p class="text-center" style="color:rgb(106,102,102);font-size:29px;">Please <a href="login.html" style="color:rgb(45,17,215);text-decoration:underline">Log In.</a></p>
+                </div>
                 <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white transparency border-bottom border-light" id="transmenu" style="color:rgb(255,255,255);background-color:#439d4c;">
                     <div class="container"><a class="navbar-brand text-success" href="index.html" style="font-family:'News Cycle', sans-serif;font-size:39px;">&nbsp;<img class="img-fluid" src="static/img/Aphel_icon.png" alt="Aphel Technologies" width="97px" height="97px" style="padding-right:0px;margin-right:10px;margin-bottom:7px;"></a>
                         <button
@@ -61,54 +65,7 @@
                     </div>
                 </nav>
             </div>
-            <div class="d-flex align-items-center" style="height:97vh;background-color:rgb(238,238,238);font-family:'News Cycle', sans-serif;padding:40px;padding-top:48vh;padding-bottom:80vh;">
-                <div class="text-center w-100 text-white">
-                    <div class="container profile profile-view" id="profile">
-                        <div class="row">
-                            <div class="col-md-12 alert-col relative">
-                                <div class="alert alert-info absolue center" role="alert"><button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button><span>Profile save with success</span></div>
-                            </div>
-                        </div>
-                        <form>
-                            <div class="form-row profile-row" style="font-family:'News Cycle', sans-serif;color:rgb(0,0,0);">
-                                <div class="col-md-4 relative">
-                                    <div class="avatar">
-                                        <div class="avatar-bg center"></div>
-                                    </div><input type="file" class="form-control" name="avatar-file"></div>
-                                <div class="col-md-8">
-                                    <h1>Profile </h1>
-                                    <hr>
-                                    <div class="form-row">
-                                        <div class="col-sm-12 col-md-6">
-                                            <div class="form-group"><label>Firstname </label><input class="form-control" type="text" name="firstname"></div>
-                                        </div>
-                                        <div class="col-sm-12 col-md-6">
-                                            <div class="form-group"><label>Lastname </label><input class="form-control" type="text" name="lastname"></div>
-                                        </div>
-                                    </div>
-                                    <div class="form-group"><label>Email </label><input class="form-control" type="email" autocomplete="off" required="" name="email"></div>
-                                    <div class="form-row">
-                                        <div class="col-sm-12 col-md-6">
-                                            <div class="form-group"><label>Grade</label><input class="form-control" type="password" name="password" autocomplete="off" required=""></div>
-                                        </div>
-                                        <div class="col-sm-12 col-md-6">
-                                            <div class="dropdown"><button class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false" type="button" style="height:38px;margin:25px;background-color:rgb(255,255,255);color:rgb(0,0,0);">Clubs</button>
-                                                <div
-                                                    class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="#">First Item</a><a class="dropdown-item" role="presentation" href="#">Second Item</a><a class="dropdown-item" role="presentation" href="#">Third Item</a></div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <hr>
-                                <div class="form-row">
-                                    <div class="col-md-12 content-right"><button class="btn btn-primary form-btn" type="submit">SAVE </button><button class="btn btn-danger form-btn" type="reset">CANCEL </button></div>
-                                </div>
-                            </div>
-                    </div>
-                    </form>
-                </div>
-            </div>
-    </div>
-    </header>
+        </header>
     </div>
     <section class="d-block"></section>
     <div class="footer-basic" style="background-color:#439d4c;">
