Touched some things up in logout

--- a/templates/logout.html
+++ b/templates/logout.html
@@ -63,8 +63,8 @@
     </div>
     <div class="row">
         <div class="col">
-            <div class="login-card" style="font-family:'News Cycle', sans-serif;width:350px;height:370px;">
-                <p class="profile-name-card" style="font-size:31px;color:rgb(156,157,157);height:137px;padding:60px 0px;">Successfully logged out!</p>
+            <div class="login-card" style="font-family:'News Cycle', sans-serif;">
+                <p class="profile-name-card" style="font-size:31px;color:rgb(156,157,157);padding:30% 0px;">Successfully logged out!</p>
             </div>
         </div>
     </div>
