Announcement review works

--- a/templates/confirmation_confirmed.html
+++ b/templates/confirmation_confirmed.html
@@ -38,8 +38,8 @@
         <header>
             <div class="d-flex align-items-center" style="height:100vh;background-color:rgb(238,238,238);padding:62vh 20px 55vh;padding-top:380px;padding-bottom:230px;">
                 <div class="login-card" style="font-family:'News Cycle', sans-serif;width:350px;height:370px;">
-                    <p class="profile-name-card" style="font-size:31px;color:rgb(156,157,157);height:137px;">Account Succesfully Confirmed!</p>
-                    <p class="text-center" style="color:rgb(106,102,102);font-size:29px;">Please <a href="login.html" style="color:rgb(45,17,215);text-decoration:underline">Log In.</a></p>
+                    <p id="confirmation_confirmed_status" class="profile-name-card" style="font-size:31px;color:rgb(156,157,157);height:137px;">Account Succesfully Confirmed!</p>
+                    <p class="text-center" id="confirmation_confirmed_login" style="color:rgb(106,102,102);font-size:29px;">Please <a href="login.html" style="color:rgb(45,17,215);text-decoration:underline">Log In.</a></p>
                 </div>
                 <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white transparency border-bottom border-light" id="transmenu" style="color:rgb(255,255,255);background-color:#439d4c;">
                     <div class="container"><a class="navbar-brand text-success" href="index.html" style="font-family:'News Cycle', sans-serif;font-size:39px;">&nbsp;<img class="img-fluid" src="static/img/Aphel_icon.png" alt="Aphel Technologies" width="97px" height="97px" style="padding-right:0px;margin-right:10px;margin-bottom:7px;"></a>
@@ -94,8 +94,9 @@
     <script src="static/js/server_function/post_announcement.js"></script>
     <script src="static/js/server_function/user_announcements.js"></script>
     <script src="static/js/website_function/failed_login_modal.js"></script>
-    <script src="static/js/server_function/confirmation.js"></script>
+    <script src="static/js/server_function/confirmation_confirmed.js"></script>
     <script src="static/js/website_function/navbar.js"></script>
+    <script src="static/js/server_function/review_confirmed.js"></script>
     <script src="static/js/website_function/logout.js"></script>
 </body>
 
