--- a/templates/students.html
+++ b/templates/students.html
@@ -70,9 +70,9 @@
                 <p style="font-size:20px;margin-bottom:5px;width:100%;">Student Name<br></p>
                 <p style="width:100%;color:rgb(132,164,197);">Authorization Level (ex. Trusted User or Requires Teacher Supervision)<br></p>
             </div>
-            <div class="dropdown show d-inline-block float-right" style="width:25%;margin-top:0px;margin-right:0px;padding-left:0px;margin-left:0px;"><button class="btn btn-primary btn-sm dropdown-toggle d-inline-block float-right" data-toggle="dropdown" aria-expanded="true" type="button" style="color:rgb(33,37,41);font-family:'News Cycle', sans-serif;font-size:16px;width:80px;">Options</button>
+            <div class="dropdown d-inline-block float-right" style="width:25%;margin-top:0px;margin-right:0px;padding-left:0px;margin-left:0px;"><button class="btn btn-primary btn-sm dropdown-toggle d-inline-block float-right" data-toggle="dropdown" aria-expanded="false" type="button" style="color:rgb(33,37,41);font-family:'News Cycle', sans-serif;font-size:16px;width:80px;">Options</button>
                 <div
-                    class="dropdown-menu dropdown-menu-right show" role="menu"><a class="dropdown-item" role="presentation" href="#" style="color:rgb(220,20,20);font-family:'News Cycle', sans-serif;">Delete</a><a class="dropdown-item" role="presentation" href="#" style="font-family:'News Cycle', sans-serif;color:rgb(79,160,102);">Edit Permissions</a>
+                    class="dropdown-menu dropdown-menu-right" role="menu"><a class="dropdown-item" role="presentation" href="#" style="color:rgb(220,20,20);font-family:'News Cycle', sans-serif;">Delete</a><a class="dropdown-item" role="presentation" href="#" style="font-family:'News Cycle', sans-serif;color:rgb(79,160,102);">Edit Permissions</a>
                     <a
                         class="dropdown-item" role="presentation" href="#">Third Item</a>
             </div>
@@ -105,8 +105,9 @@
     <script src="static/js/server_function/post_announcement.js"></script>
     <script src="static/js/server_function/user_announcements.js"></script>
     <script src="static/js/website_function/failed_login_modal.js"></script>
-    <script src="static/js/server_function/confirmation.js"></script>
+    <script src="static/js/server_function/confirmation_confirmed.js"></script>
     <script src="static/js/website_function/navbar.js"></script>
+    <script src="static/js/server_function/review_confirmed.js"></script>
     <script src="static/js/website_function/logout.js"></script>
 </body>
 
