--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -81,7 +81,7 @@
         </div>
     </div>
     <div style="margin-top:24px;"></div>
-    <div class="footer-basic" style="background-color:#439d4c;bottom:0px;position:fixed;width:100%;">
+    <div class="footer-basic" style="background-color:#439d4c;bottom:0px;position:fixed;width:100%;left:0;bottom:0">
         <footer>
             <div class="social"><a href="https://www.instagram.com/pchackingsquad/" style="color:rgb(255,255,255);"><i class="icon ion-social-instagram"></i></a><a href="#" style="color:rgb(255,255,255);"><i class="icon ion-social-twitter" style="color:rgb(255,255,255);"></i></a></div>
             <ul
@@ -107,8 +107,9 @@
     <script src="static/js/server_function/post_announcement.js"></script>
     <script src="static/js/server_function/user_announcements.js"></script>
     <script src="static/js/website_function/failed_login_modal.js"></script>
-    <script src="static/js/server_function/confirmation.js"></script>
+    <script src="static/js/server_function/confirmation_confirmed.js"></script>
     <script src="static/js/website_function/navbar.js"></script>
+    <script src="static/js/server_function/review_confirmed.js"></script>
     <script src="static/js/website_function/logout.js"></script>
 </body>
 
