--- a/templates/review_confirmed.html
+++ b/templates/review_confirmed.html
@@ -34,7 +34,7 @@
 </head>
 
 <body>
-    <div class="row" style="height:181px;">
+    <div class="row" style="height:179px;">
         <div class="col">
             <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white transparency border-bottom border-light" id="transmenu" style="color:rgb(255,255,255);background-color:#439d4c;">
                 <div class="container"><a class="navbar-brand text-success" href="index.html" style="font-family:'News Cycle', sans-serif;font-size:39px;">&nbsp;<img class="img-fluid" src="static/img/Aphel_icon.png" alt="Aphel Technologies" width="97px" height="97px" style="padding-right:0px;margin-right:10px;margin-bottom:7px;"></a>
@@ -61,13 +61,16 @@
             </nav>
         </div>
     </div>
-    <div class="row">
-        <div class="col">
-            <div class="login-card" style="font-family:'News Cycle', sans-serif;">
-                <p class="profile-name-card" style="font-size:31px;color:rgb(156,157,157);padding:30% 0px;">Successfully logged out!</p>
-            </div>
-        </div>
+    <div class="login-card" style="font-family:'News Cycle', sans-serif;margin:30px 321px 25px;">
+        <p id="review_status" class="profile-name-card" style="font-size:31px;color:rgb(156,157,157);height:137px;">Announcement Succesfully Reviewed!</p>
     </div>
+    <div class="footer-basic" style="background-color:#439d4c;position:fixed;left:0;bottom:0;width:100%;">
+        <footer>
+            <div class="social"><a href="https://www.instagram.com/pchackingsquad/" style="color:rgb(255,255,255);"><i class="icon ion-social-instagram"></i></a><a href="#" style="color:rgb(255,255,255);"><i class="icon ion-social-twitter" style="color:rgb(255,255,255);"></i></a></div>
+            <ul
+                class="list-inline"></ul>
+                <p class="copyright" style="color:rgb(255,255,255);">Alphel @ 2018</p>
+        </footer><a href="#0" class="cd-top js-cd-top cd-top--fade-out cd-top--show" style="background-image:url('static/img/cd-top-arrow.svg');width:40px;height:40px;">Top</a></div>
     <script src="static/js/jquery.min.js"></script>
     <script src="static/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
