Added teacher email hints to post_announcement_review form to make it easier to pick the reviewing teacher.

--- a/templates/review_confirmed.html
+++ b/templates/review_confirmed.html
@@ -61,8 +61,12 @@
             </nav>
         </div>
     </div>
-    <div class="login-card" style="font-family:'News Cycle', sans-serif;margin:30px 321px 25px;">
-        <p id="review_status" class="profile-name-card" style="font-size:31px;color:rgb(156,157,157);height:137px;">Announcement Succesfully Reviewed!</p>
+    <div class="row">
+        <div class="col">
+            <div class="login-card" style="font-family:'News Cycle', sans-serif;">
+                <p id="review_status" class="profile-name-card" style="font-size:31px;color:rgb(156,157,157);height:137px;">Announcement Succesfully Reviewed!</p>
+            </div>
+        </div>
     </div>
     <div class="footer-basic" style="background-color:#439d4c;position:fixed;left:0;bottom:0;width:100%;">
         <footer>
